# routes/index.js
@@ -5,6 +5,16 @@ const swaggerDocument = require('../swagger-output.json');
 
 const studentRoutes = require('./student');
 const courseRoutes = require('./course'); 
+const passport = require('passport');
+
+routes.get('/login', passport.authenticate('google', { scope: ['profile', 'email'] }), (req, res) => {});
+
+routes.get("/logout", function(req, res, next) {
+    req.logout(function(err) {
+      if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
 
 // Use routes
 routes.use('/student', studentRoutes);  // all student routes under /students
@@ -15,5 +25,6 @@ routes.use('/course', courseRoutes);    // all course routes under /courses
 
 // Swagger UI
 routes.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
 
 module.exports = routes;
